Improve TaskController tests
Signed-off-by: mikovsky <dudek.michal1996@gmail.com>